--- a/pages/слайдер1.html
+++ b/pages/слайдер1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,72 +9,42 @@
     <script src="слайдер.js"></script>
     <title>Document</title>
 </head>
+
 <body>
-<div class="block2_3">
-    <div class="block2">
-        <div class="block2_projects">
-            <div class="block2_projects__text">
-                <h1 class="block2_projects__text_h1">
-                    COMPLETED PROJECTS
-                </h1>
-                <p class="block2_projects__text_p">
-                    Only a small part of the work performed by our
-                    company is presented on the site. For 14 years on
-                    in the construction market we have made happy more than 1000 families
-                </p>
-                <div class="block2_projects__text_blocks">
-                    <div class="block2_projects__text_blocks1">
-                    <h1 class="text_blocks1_h1">
-                        CITY
-                    </h1>
-                    <p class="text_blocks1_p">
-                        Rostov-on-Don
-                        LCD admiral</p>
+    <div class="block2_3">
+        <div class="block2">
+            <div class="block2_projects">
+                <div class="block2_projects__text">
+                    <div class="block2_projects__title-container">
+                        <h1 class="block2_projects__text_h1">
+                            COMPLETED <br>
+                            PROJECTS
+                        </h1>
+                        <p class="block2_projects__text_p">
+                            Only a small part of the work performed by our
+                            company is presented on the site. For 14 years on
+                            in the construction market we have made happy more than 1000 families
+                        </p>
+                    </div>
+                    <div class="block2_projects__cities-slider"></div>
                 </div>
-                <div class="block2_projects__text_blocks2">
-                    <h1 class="text_blocks1_h1">
-                        APARTMENT AREA
-                    </h1>
-                    <p class="text_blocks1_p">
-                        81 m2 </p>
-                </div>
-               </div>
-               <div class="block2_projects__text_blocks">
-                <div class="block2_projects__text_blocks1">
-                <h1 class="text_blocks1_h1">
-                    REPAIR TIME
-                </h1>
-                <p class="text_blocks1_p">
-                    3.5 months</p>
-            </div>
-            <div class="block2_projects__text_blocks2">
-                <h1 class="text_blocks1_h1">
-                    REPAIR COST
-                </h1>
-                <p class="text_blocks1_p">
-                    Upon request </p>
-            </div>
-           </div>
-            </div>
             </div>
         </div>
     </div>
     <div class="block3">
         <div class="block3__navigation">
             <ul class="block3__navigation__nav">
-<!--                <li class="block3__navigation__nav_li"> ROSTOV-ON-DON, ADMIRAL</li>-->
-<!--                <li class="block3__navigation__nav_li"> SOCHIE THIEVES</li>-->
-<!--                <li class="block3__navigation__nav_li"> ROSTOV-ON-DON, PATRIOTIC</li>-->
             </ul>
         </div>
         <section class="slider">
             <div class="slider__images"></div>
             <div class="slider__arrows">
-              <div class="slider__arrow left"></div>
-              <div class="slider__arrow right"></div>
+                <div class="slider__arrow left"></div>
+                <div class="slider__arrow right"></div>
             </div>
             <div class="slider__dots"></div>
-          </section>
+        </section>
     </div>
 </body>
+
 </html>
